# cross-asset-lead-lag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run_pipeline.py
.github/workflows/: ci.yml
agent/: __init__.py  alerts.py  monitor.py  narrator.py
config/: __init__.py  settings.py  universe.yaml
dashboard/: __init__.py  app.py
dashboard/components/: __init__.py  charts.py
dashboard/pages/: __init__.py  backtest_results.py  network_graph.py  regime_panel.py  signal_monitor.py
dashboard/views/: backtest_results.py  network_graph.py  regime_panel.py  robustness_panel.py  (+1 more)
data/: __init__.py  ingestion.py  preprocessing.py  returns.py
discovery/: __init__.py  neural_granger.py  significance.py  time_lagged_mi.py  transfer_entropy.py  variable_lag.py
models/: __init__.py  cv.py  delta_lag.py  lasso_var.py  ms_var.py  regime_detector.py
notebooks/: 01_data_exploration.ipynb  02_transfer_entropy.ipynb  03_neural_granger.ipynb  04_regime_switching_var.ipynb  05_signal_backtest.ipynb  06_dashboard_prototype.ipynb
scripts/: gen_readme_chart.py
signals/: __init__.py  backtest.py  generator.py  metrics.py  portfolio.py
tests/: conftest.py  test_backtest.py  test_cv.py  test_delta_lag.py  test_effective_te.py  test_lasso_var.py  test_metrics.py  test_monitor.py  test_ms_var.py  test_neural_granger.py  test_portfolio.py  test_preprocessing.py  test_regime_detector.py  test_regime_signals.py  test_returns.py  test_signals.py  test_significance.py  test_time_lagged_mi.py  test_transfer_entropy.py  test_variable_lag.py
