[project]
name = "cross-asset-lead-lag"
version = "0.1.0"
description = "Cross-Asset Stochastic Lead-Lag Discovery Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "yfinance>=0.2.28",
    "fredapi>=0.5.1",
    "statsmodels>=0.14",
    "networkx>=3.1",
    "pyvis>=0.3.2",
    "streamlit>=1.28",
    "plotly>=5.17",
    "openai>=1.6",
    "arch>=6.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
    "hmmlearn>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "jupyter>=1.0",
    "ipykernel>=6.25",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.5",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "data*", "discovery*", "models*", "signals*", "agent*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
